[tool.poetry]
name = "2048"
version = "0.1.0"
description = "A 2048 game built with Python and Pygame"
authors = ["sayhan1610 <sayhanrahman@gokkusagi.k12.tr>"]

[tool.poetry.dependencies]
python = "^3.11"
pygame = "^2.5.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
